--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,15 +1,26 @@
-a {
-	color: #BA209B;
-	text-decoration: none;
-	&:hover {
-		color: #D424B1;
-	}
+html{
+	font-size: 62.5%;
+}
+
+body{
+	font-size: 1.2rem;
+}
+
+h1,h2,h3,h4,h5{
+	font-family: $playfair,
+}
+h2{
+	font-size: 3rem;
+}
+h3{
+	font-size: 2rem;
 }
 
 /* paragraphs */
 
 p {
 	line-height: 1.5;
+	font-family: $lato;
 }
 
 /*blockquotes*/
