--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -49,3 +49,51 @@ header{
 		}		
 	}
 }
+
+//hamburger button
+.nav__menuBtn{
+	width: 50px;
+	height: 50px;
+	cursor: pointer;
+	.nav__menuBtn_bar{
+		width: 22px;
+		height: 3px;
+		background: $almostblack;
+		position: relative;
+		margin: 0 auto;
+		transition: all 0.35s;
+		&:before,
+		&:after{
+			width: 22px;
+			height: 3px;
+			background: $almostblack;
+			content: '';
+			position: absolute;
+			transition: all 0.35s;
+		}
+		&:before{
+			top: -7px;
+		}
+		&:after{
+			top: 7px;
+		}
+	}
+
+}
+.container{
+	input[type=checkbox]{
+	  display:none;
+	}
+	input[type=checkbox]:checked ~ label .nav__menuBtn_bar{
+		background-color:transparent,
+	}
+	input[type=checkbox]:checked ~ label .nav__menuBtn_bar:before{
+		top: 0;
+		transform: rotate(45deg);
+	}
+	input[type=checkbox]:checked ~ label .nav__menuBtn_bar:after{
+		top: 0;
+		transform: rotate(-45deg);
+	}
+	
+}
